# shut_the_box_rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
