[package]
name = "shut_the_box_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
rustop = "1.1.2"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
async-std = "1.12.0"
